<resources>
    <string name="app_name">GroupUp</string>
    <string name="login_title">Group Up!\u00A0</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="group_title">Your groups</string>
    <string name="create_meeting_point_title">Meeting</string>
    <string name="explore_title">Explore</string>
    <string name="schedule_title">Schedule</string>
    <string name="user_title">Grouped Up</string>
    <string name="settings_title">Settings</string>
    <string name="friends_title">Friends</string>
    <string name="addFriend_title">Add Friend</string>
    <string name="friends_invites_title">Friends Invites</string>
    <string name="description">Description</string>
    <string name="tags">Tags</string>
    <string name="toMap">Place on the map</string>
    <string name="searchHint">Search here…</string>
    <string name="numberOfPeople">\ Participants</string>
    <string name="groupNameHint">Group name</string>
    <string name="errorEmpty">Field is empty</string>
    <string name="create">Create</string>
    <string name="menu_profile">Edit Profile</string>
    <string name="menu_notification">Friends Invites</string>
    <string name="menu_friend">Friends List</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="first_name_value">First name value</string>
    <string name="last_name">Last name</string>
    <string name="last_name_value">Last name value</string>
    <string name="email">Email</string>
    <string name="email_value">Email value</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="addUser_title">Add participant</string>
    <string name="addUser_none">All your friends are participants of this group</string>
    <string name="leave_participant">Leave</string>
    <string name="searchUsername">Friend\'s Username</string>
    <string name="addFriend_button">Add Friend</string>
    <string name="userNotExist">Username doesn\'t exist</string>
    <string name="invitationStillProcessing">User already invited, wait for their response !</string>
    <string name="invites_none">There are no friends invites for you\..\.</string>
    <string name="friends_none">Oh, you have no friends \..\. That\'s awkward \..\.</string>
    <string name="leave_friendship">No more friends</string>
    <string name="add_photo">Add a photo</string>
    <string name="add_tag">Add a tag</string>
    <string name="menu_short">\> 2 km</string>
    <string name="menu_mid">\> 10 km</string>
    <string name="menu_long">Show All</string>
    <string name="create_place">Create new place</string>
    <string name="title_hint">Enter the name</string>
    <string name="adress_hint">Enter the address</string>
    <string name="description_hint">Enter the description</string>
    <string name="rating_hint">Enter your rating</string>
    <string name="plan_name">\'s Plan</string>
    <string name="create_plan">Add to an Event</string>
    <string name="add_event">Add Event</string>
    <string name="no_rating">No rating</string>
    <string name="add_rating">Add Rating</string>
    <string name="dog_tag">Tag to add</string>
    <string name="create_tag">Add Tag</string>
    <string name="login_show">Login</string>
    <string name="create_account">Create Account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="errorSamePassword">Not Same password Inputted</string>
    <string name="errorNotComplete">Every field needs to be completed</string>
    <string name="errorUsername">Username is already taken</string>
    <string name="error_login">Username or password doesn\'t correspond</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="username_hint">Username</string>
    <string name="chat_channel">xFOd3Tqsb25TmL2e</string>
    <string name="title_activity_create_meeting_point">CreateMeetingPointActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delete_place">Delete Place</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ask_delete_place">Are you sure you want to delete this place?</string>
    <string name="ask_allowed">Are you OK with sharing this photo to other users on social media?</string>
    <string name="edit_place">Edit Place</string>
    <string name="finish_edit">Finish Edit</string>
    <string name="logout">Log Out</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="facebook_app_id">2636603086667646</string>
    <string name="fb_login_protocol_scheme">fb2636603086667646</string>

    <string-array name="meeting_point_spinner">
        <item>30min</item>
        <item>1h</item>
        <item>1h30</item>
        <item>2h</item>
    </string-array>
</resources>
