<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".MainActivity">

    <ImageView
            android:id="@+id/returnButton"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:background="@drawable/return_bg"
            android:src="@drawable/ic_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/travel_goals"
            android:textSize="80sp"
            android:textColor="@android:color/white"
            android:text="@string/login_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26" />

    <EditText
            android:id="@+id/usernameInput"
            android:hint="@string/username_hint"
            android:textColorHint="@android:color/white"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:background="@drawable/input_bg"
            android:textColor="@android:color/white"
            android:alpha="0"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/login_show"
            android:textColor="@android:color/white"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="@+id/passwordInput"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <EditText
            android:id="@+id/passwordConfirmInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:alpha="0"
            android:background="@drawable/input_bg"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password_confirm_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmInput" />

    <Button
            android:id="@+id/create"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:background="@drawable/login_button_bg"
            android:text="@string/create_account"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/emailInput"
            app:layout_constraintStart_toStartOf="@+id/emailInput"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="@+id/create"
            app:layout_constraintStart_toStartOf="@+id/create"
            app:layout_constraintTop_toBottomOf="@+id/create"
            />


    <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Huskky"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="Bunuu"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/loginShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/login_show"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/createShow"
            app:layout_constraintStart_toStartOf="@+id/createShow"
            app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
            android:id="@+id/createShow"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/create_account"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginShow" />
</androidx.constraintlayout.widget.ConstraintLayout>