<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/example"
            app:border_color="@color/borderProfile"
            app:border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="Save Edit"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.792"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

    <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_background"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
            android:id="@+id/firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/first_name"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
            android:id="@+id/firstname_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:textSize="20sp"
            android:background="@drawable/edit_background"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstname" />

    <TextView
            android:id="@+id/lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/last_name"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstname_value" />

    <EditText
            android:id="@+id/lastname_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:textSize="20sp"
            android:background="@drawable/edit_background"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/lastname" />

    <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastname_value" />

    <EditText
            android:id="@+id/email_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="50dp"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:textSize="20sp"
            android:background="@drawable/edit_background"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/old_password"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_value" />

    <EditText
            android:id="@+id/password_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="50dp"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:textSize="20sp"
            android:background="@drawable/edit_background"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/new_password"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_value" />

    <EditText
            android:id="@+id/new_password_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="50dp"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:textSize="20sp"
            android:background="@drawable/edit_background"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_password"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:id="@+id/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_password"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_password_value" />

    <EditText
            android:id="@+id/confirm_password_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:background="@drawable/edit_background"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password"
            app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>