<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/basicBackground"
        tools:context=".PlaceActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_shape_title"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/place_example_2"
                android:background="@android:color/black"
                android:foreground="@drawable/photo_frame_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/dot_selected"
                android:src="@drawable/ic_close_white"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:layout_width="44dp"
                android:layout_height="43dp"
                android:src="@drawable/ic_chevron_left_black"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_chevron_left_primary"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/imageView6"
                android:layout_width="44dp"
                android:layout_height="43dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_chevron_right_black"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_chevron_right_primary"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/more"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/dot_selected"
                android:src="@drawable/ic_add_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.88"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.90999997" />

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:text="TEST"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textColor="@color/selectedShadedText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/tags"
            android:textColor="@color/shadedText"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ImageView
            android:id="@+id/imageView5"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:src="@drawable/dot_selected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/shadedText"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            tools:layout_editor_absoluteX="20dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/bottom_shape_info"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
                android:id="@+id/imageView4"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/geo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="20 km"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/imageView3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/distance"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="4.5"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_background"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/toMap"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>